tests/bad_dataflow.out
STDOUT:

STDERR:
CFG lowering error in function foo: MalformedPhiInfo(MalformedPhiInfo { infos: [SingleMalformedPhiInfo { bb_id: BBId(5), phi_dest: ValueRef(25, 39..40, Some(VarId(2)), None), phi_var_id: Some(VarId(2)), sources: {BBId(4): Value(ValueRef(11, 124..127, Some(VarId(2)), None))}, missing_sources: {BBId(2)} }, SingleMalformedPhiInfo { bb_id: BBId(3), phi_dest: ValueRef(24, 39..40, Some(VarId(2)), None), phi_var_id: Some(VarId(2)), sources: {BBId(1): Value(ValueRef(6, 75..78, Some(VarId(2)), None)), BBId(5): Value(ValueRef(25, 39..40, Some(VarId(2)), None))}, missing_sources: {BBId(5)} }, SingleMalformedPhiInfo { bb_id: BBId(8), phi_dest: ValueRef(39, 39..40, Some(VarId(2)), None), phi_var_id: Some(VarId(2)), sources: {BBId(6): Value(ValueRef(33, 39..40, Some(VarId(2)), Some(BBId(3)))), BBId(7): Value(ValueRef(34, 39..40, Some(VarId(2)), Some(BBId(3))))}, missing_sources: {BBId(6), BBId(7)} }, SingleMalformedPhiInfo { bb_id: BBId(8), phi_dest: ValueRef(26, 50..51, Some(VarId(3)), None), phi_var_id: Some(VarId(3)), sources: {BBId(6): Value(ValueRef(16, 167..170, Some(VarId(3)), None)), BBId(7): Value(ValueRef(18, 193..196, Some(VarId(3)), None))}, missing_sources: {BBId(6)} }], malformed_assignments: [SingleMalformedAssignmentInfo { bb_id: BBId(6), dest_val: ValueRef(15, 169..170, Some(VarId(2)), None), assigned_val: Value(ValueRef(33, 39..40, Some(VarId(2)), Some(BBId(3)))), missing_sources: {} }, SingleMalformedAssignmentInfo { bb_id: BBId(6), dest_val: ValueRef(16, 167..170, Some(VarId(3)), None), assigned_val: Value(ValueRef(15, 169..170, Some(VarId(2)), None)), missing_sources: {} }, SingleMalformedAssignmentInfo { bb_id: BBId(8), dest_val: ValueRef(19, 215..216, Some(VarId(3)), None), assigned_val: Value(ValueRef(26, 50..51, Some(VarId(3)), None)), missing_sources: {} }], phi_assignments: [SingleMalformedAssignmentInfo { bb_id: BBId(6), dest_val: ValueRef(33, 39..40, Some(VarId(2)), Some(BBId(3))), assigned_val: Value(ValueRef(24, 39..40, Some(VarId(2)), None)), missing_sources: {BBId(3), BBId(5)} }, SingleMalformedAssignmentInfo { bb_id: BBId(7), dest_val: ValueRef(34, 39..40, Some(VarId(2)), Some(BBId(3))), assigned_val: Value(ValueRef(24, 39..40, Some(VarId(2)), None)), missing_sources: {BBId(3), BBId(5)} }], malformed_tails: [SingleMalformedTailInfo { bb_id: BBId(8), missing_sources: {} }], blocks: [BasicBlock { id: BBId(0), phi: [], instructions: [Assign { dest: ValueRef(0, 20..21, Some(VarId(0)), None), val: Param { param_index: 0 } }, Assign { dest: ValueRef(1, 27..28, Some(VarId(1)), None), val: Param { param_index: 1 } }, Assign { dest: ValueRef(2, 60..61, Some(VarId(0)), None), val: Value(ValueRef(0, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(3, 62..63, None, None), val: Const(0) }, Assign { dest: ValueRef(4, 60..63, None, None), val: LtCheck { left: ValueRef(2, 60..61, Some(VarId(0)), None), right: ValueRef(3, 62..63, None, None) } }], tail: CondBranch { cond: ValueRef(4, 60..63, None, None), then_bb: BBId(1), else_bb: BBId(2) }, successors: [BBId(1), BBId(2)], predecessors: [] }, BasicBlock { id: BBId(1), phi: [], instructions: [Assign { dest: ValueRef(21, 27..28, Some(VarId(1)), Some(BBId(0))), val: Value(ValueRef(1, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(20, 20..21, Some(VarId(0)), Some(BBId(0))), val: Value(ValueRef(0, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(5, 77..78, None, None), val: Const(1) }, Assign { dest: ValueRef(6, 75..78, Some(VarId(2)), None), val: Value(ValueRef(5, 77..78, None, None)) }], tail: UncondBranch { target: BBId(3) }, successors: [BBId(3)], predecessors: [BBId(0)] }, BasicBlock { id: BBId(2), phi: [], instructions: [Assign { dest: ValueRef(23, 27..28, Some(VarId(1)), Some(BBId(0))), val: Value(ValueRef(1, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(22, 20..21, Some(VarId(0)), Some(BBId(0))), val: Value(ValueRef(0, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(7, 105..106, Some(VarId(0)), None), val: Value(ValueRef(22, 20..21, Some(VarId(0)), Some(BBId(0)))) }, Assign { dest: ValueRef(8, 107..108, None, None), val: Const(0) }, Assign { dest: ValueRef(9, 105..108, None, None), val: GtCheck { left: ValueRef(7, 105..106, Some(VarId(0)), None), right: ValueRef(8, 107..108, None, None) } }], tail: CondBranch { cond: ValueRef(9, 105..108, None, None), then_bb: BBId(4), else_bb: BBId(5) }, successors: [BBId(4), BBId(5)], predecessors: [BBId(0)] }, BasicBlock { id: BBId(3), phi: [PhiCfgInstruction { dest: ValueRef(24, 39..40, Some(VarId(2)), None), sources: {BBId(1): Value(ValueRef(6, 75..78, Some(VarId(2)), None)), BBId(5): Value(ValueRef(25, 39..40, Some(VarId(2)), None))}, var_id: Some(VarId(2)) }, PhiCfgInstruction { dest: ValueRef(27, 20..21, Some(VarId(0)), None), sources: {BBId(1): Value(ValueRef(20, 20..21, Some(VarId(0)), Some(BBId(0)))), BBId(5): Value(ValueRef(31, 20..21, Some(VarId(0)), None))}, var_id: Some(VarId(0)) }, PhiCfgInstruction { dest: ValueRef(28, 27..28, Some(VarId(1)), None), sources: {BBId(1): Value(ValueRef(21, 27..28, Some(VarId(1)), Some(BBId(0)))), BBId(5): Value(ValueRef(32, 27..28, Some(VarId(1)), None))}, var_id: Some(VarId(1)) }], instructions: [Assign { dest: ValueRef(12, 152..153, Some(VarId(1)), None), val: Value(ValueRef(28, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(13, 154..155, None, None), val: Const(0) }, Assign { dest: ValueRef(14, 152..155, None, None), val: GtCheck { left: ValueRef(12, 152..153, Some(VarId(1)), None), right: ValueRef(13, 154..155, None, None) } }], tail: CondBranch { cond: ValueRef(14, 152..155, None, None), then_bb: BBId(6), else_bb: BBId(7) }, successors: [BBId(6), BBId(7)], predecessors: [BBId(1), BBId(5)] }, BasicBlock { id: BBId(4), phi: [], instructions: [Assign { dest: ValueRef(30, 27..28, Some(VarId(1)), Some(BBId(2))), val: Value(ValueRef(23, 27..28, Some(VarId(1)), Some(BBId(0)))) }, Assign { dest: ValueRef(29, 20..21, Some(VarId(0)), Some(BBId(2))), val: Value(ValueRef(22, 20..21, Some(VarId(0)), Some(BBId(0)))) }, Assign { dest: ValueRef(10, 126..127, None, None), val: Const(2) }, Assign { dest: ValueRef(11, 124..127, Some(VarId(2)), None), val: Value(ValueRef(10, 126..127, None, None)) }], tail: UncondBranch { target: BBId(5) }, successors: [BBId(5)], predecessors: [BBId(2)] }, BasicBlock { id: BBId(5), phi: [PhiCfgInstruction { dest: ValueRef(25, 39..40, Some(VarId(2)), None), sources: {BBId(4): Value(ValueRef(11, 124..127, Some(VarId(2)), None))}, var_id: Some(VarId(2)) }, PhiCfgInstruction { dest: ValueRef(31, 20..21, Some(VarId(0)), None), sources: {BBId(2): Value(ValueRef(22, 20..21, Some(VarId(0)), Some(BBId(0)))), BBId(4): Value(ValueRef(29, 20..21, Some(VarId(0)), Some(BBId(2))))}, var_id: Some(VarId(0)) }, PhiCfgInstruction { dest: ValueRef(32, 27..28, Some(VarId(1)), None), sources: {BBId(2): Value(ValueRef(23, 27..28, Some(VarId(1)), Some(BBId(0)))), BBId(4): Value(ValueRef(30, 27..28, Some(VarId(1)), Some(BBId(2))))}, var_id: Some(VarId(1)) }], instructions: [], tail: UncondBranch { target: BBId(3) }, successors: [BBId(3)], predecessors: [BBId(2), BBId(4)] }, BasicBlock { id: BBId(6), phi: [], instructions: [Assign { dest: ValueRef(36, 27..28, Some(VarId(1)), Some(BBId(3))), val: Value(ValueRef(28, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(35, 20..21, Some(VarId(0)), Some(BBId(3))), val: Value(ValueRef(27, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(33, 39..40, Some(VarId(2)), Some(BBId(3))), val: Value(ValueRef(24, 39..40, Some(VarId(2)), None)) }, Assign { dest: ValueRef(15, 169..170, Some(VarId(2)), None), val: Value(ValueRef(33, 39..40, Some(VarId(2)), Some(BBId(3)))) }, Assign { dest: ValueRef(16, 167..170, Some(VarId(3)), None), val: Value(ValueRef(15, 169..170, Some(VarId(2)), None)) }], tail: UncondBranch { target: BBId(8) }, successors: [BBId(8)], predecessors: [BBId(3)] }, BasicBlock { id: BBId(7), phi: [], instructions: [Assign { dest: ValueRef(38, 27..28, Some(VarId(1)), Some(BBId(3))), val: Value(ValueRef(28, 27..28, Some(VarId(1)), None)) }, Assign { dest: ValueRef(37, 20..21, Some(VarId(0)), Some(BBId(3))), val: Value(ValueRef(27, 20..21, Some(VarId(0)), None)) }, Assign { dest: ValueRef(34, 39..40, Some(VarId(2)), Some(BBId(3))), val: Value(ValueRef(24, 39..40, Some(VarId(2)), None)) }, Assign { dest: ValueRef(17, 195..196, None, None), val: Const(0) }, Assign { dest: ValueRef(18, 193..196, Some(VarId(3)), None), val: Value(ValueRef(17, 195..196, None, None)) }], tail: UncondBranch { target: BBId(8) }, successors: [BBId(8)], predecessors: [BBId(3)] }, BasicBlock { id: BBId(8), phi: [PhiCfgInstruction { dest: ValueRef(26, 50..51, Some(VarId(3)), None), sources: {BBId(6): Value(ValueRef(16, 167..170, Some(VarId(3)), None)), BBId(7): Value(ValueRef(18, 193..196, Some(VarId(3)), None))}, var_id: Some(VarId(3)) }, PhiCfgInstruction { dest: ValueRef(39, 39..40, Some(VarId(2)), None), sources: {BBId(6): Value(ValueRef(33, 39..40, Some(VarId(2)), Some(BBId(3)))), BBId(7): Value(ValueRef(34, 39..40, Some(VarId(2)), Some(BBId(3))))}, var_id: Some(VarId(2)) }, PhiCfgInstruction { dest: ValueRef(40, 20..21, Some(VarId(0)), None), sources: {BBId(6): Value(ValueRef(35, 20..21, Some(VarId(0)), Some(BBId(3)))), BBId(7): Value(ValueRef(37, 20..21, Some(VarId(0)), Some(BBId(3))))}, var_id: Some(VarId(0)) }, PhiCfgInstruction { dest: ValueRef(41, 27..28, Some(VarId(1)), None), sources: {BBId(6): Value(ValueRef(36, 27..28, Some(VarId(1)), Some(BBId(3)))), BBId(7): Value(ValueRef(38, 27..28, Some(VarId(1)), Some(BBId(3))))}, var_id: Some(VarId(1)) }], instructions: [Assign { dest: ValueRef(19, 215..216, Some(VarId(3)), None), val: Value(ValueRef(26, 50..51, Some(VarId(3)), None)) }], tail: Return { value: Some(ValueRef(19, 215..216, Some(VarId(3)), None)) }, successors: [], predecessors: [BBId(6), BBId(7)] }] })
error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow.c:13:11
   │
 3 │     int x;
   │         - Variable declaration site
   ·
13 │         y=x;
   │           ^ value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow.c:13:9
   │
13 │         y=x;
   │         ^^^
   │         │ │
   │         │ Variable declaration site
   │         value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

error: Use before initialization detected during CFG lowering
   ┌─ tests/bad_dataflow.c:17:12
   │
 4 │     int y;
   │         - Variable declaration site
   ·
17 │     return y;
   │            ^ value not valid due to prior malformed phi
   │
   = note: this means that there are assignments to this variable, but not on all possible code paths

---
digraph MalformedPhiInfo {
  BB0 [label="BB0:\n    %0 = param[0] (a)\n    %1 = param[1] (b)\n    %2 = %0 (a)\n    %3 = const 0\n    %4 = lt %2, %3\n    br_cond %4 ? BB1 : BB2;\n"];
  BB1 [label="BB1:\n    %21 = %1 (b)\n    %20 = %0 (a)\n    %5 = const 1\n    %6 = %5 (x)\n    br BB3\n"];
  BB2 [label="BB2:\n    %23 = %1 (b)\n    %22 = %0 (a)\n    %7 = %22 (a)\n    %8 = const 0\n    %9 = gt %7, %8\n    br_cond %9 ? BB4 : BB5;\n"];
  BB3 [label="BB3:\n    %24 = Φ(%6@BB1, %25@BB5 [malformed: missing from BBs [5]]) (x)\n    %27 = Φ(%20@BB1, %31@BB5) (a)\n    %28 = Φ(%21@BB1, %32@BB5) (b)\n    %12 = %28 (b)\n    %13 = const 0\n    %14 = gt %12, %13\n    br_cond %14 ? BB6 : BB7;\n"];
  BB4 [label="BB4:\n    %30 = %23 (b)\n    %29 = %22 (a)\n    %10 = const 2\n    %11 = %10 (x)\n    br BB5\n"];
  BB5 [label="BB5:\n    %25 = Φ(%11@BB4 [malformed: missing from BBs [2]]) (x)\n    %31 = Φ(%22@BB2, %29@BB4) (a)\n    %32 = Φ(%23@BB2, %30@BB4) (b)\n    br BB3\n"];
  BB6 [label="BB6:\n    %36 = %28 (b)\n    %35 = %27 (a)\n    %33 = %24 [malformed: missing from BBs [3]] (x)\n    %15 = %33 [malformed: missing from BBs []] (x)\n    %16 = %15 [malformed: missing from BBs []] (y)\n    br BB8\n"];
  BB7 [label="BB7:\n    %38 = %28 (b)\n    %37 = %27 (a)\n    %34 = %24 [malformed: missing from BBs [3]] (x)\n    %17 = const 0\n    %18 = %17 (y)\n    br BB8\n"];
  BB8 [label="BB8:\n    %26 = Φ(%16@BB6, %18@BB7 [malformed: missing from BBs [6]]) (y)\n    %39 = Φ(%33@BB6, %34@BB7 [malformed: missing from BBs [6, 7]]) (x)\n    %40 = Φ(%35@BB6, %37@BB7) (a)\n    %41 = Φ(%36@BB6, %38@BB7) (b)\n    %19 = %26 [malformed: missing from BBs []] (y)\n    return %19\n"];
  BB0 -> BB1;
  BB0 -> BB2;
  BB1 -> BB3;
  BB2 -> BB4;
  BB2 -> BB5 [label="missing vars: x",fontcolor=red];
  BB3 -> BB6 [label="missing vars: x",fontcolor=red];
  BB3 -> BB7 [label="missing vars: x",fontcolor=red];
  BB4 -> BB5;
  BB5 -> BB3 [label="missing vars: x",fontcolor=red];
  BB6 -> BB8 [label="missing vars: x, y",fontcolor=red];
  BB7 -> BB8 [label="missing vars: x",fontcolor=red];
}

Error: CFG lowering failed
